# catan

./: .cursorindexignore  .gitignore  biome.json  docker-compose.yaml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
artifact/catan/: Justfile  biome.json  package.json  pnpm-lock.yaml  tsconfig.json
artifact/catan/app/: root.tsx  tailwind.css
artifact/catan/app/components/: paint-toolbar.tsx
artifact/catan/app/hook/: use-seed.tsx  use-template.tsx
artifact/catan/app/lib/: env.server.ts
artifact/catan/app/routes/: colors.ts  test.tsx  tree.tsx
artifact/tile-builder/: .gitignore  Cargo.toml
artifact/tile-builder-extension/: .vscodeignore  CHANGELOG.md  README.md  package.json  tsconfig.json
artifact/tile-builder-extension/src/: extension.ts
artifact/tile-builder/src/: asset.rs  config.rs  main.rs  render.rs  scene.rs
assets/lore/: .gitignore  tile-builder-config.json
dev/caddy/: Caddyfile
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/catan/: index.server.ts  index.ts
frontend/app/catan/application/: field.ts  template.ts
frontend/app/routes/: _index.tsx  test.tsx
src/: .gitignore  Dockerfile  biome.json  components.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/app/: root.tsx  routes.ts
src/app/components/: PaintToolbar.tsx
src/app/hook/: use-data.tsx  use-seed.tsx  use-template.tsx
src/app/models/: catan.ts  err.ts  index.ts
src/app/routes/: 3d.tsx  colors.ts  field.ts  index.tsx  test.tsx
src/textures/flat/: copy.js  main.js
(+1384 files in other folders)
