[package]
name = "tile-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.6.0"
chumsky = "0.12.0"
clap = { version = "4.5.60", features = ["derive"] }
color-eyre = "0.6.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25.9"
imageproc = "0.26.1"
walkdir = "2.5.0"

[dependencies.uuid]
version = "1.21.0"
features = ["v4"]

[profile.dev.package.backtrace]
opt-level=3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"